2007-11-09  Federico Mena Quintero  <federico@novell.com>

	Merged from trunk:

	* src/window-props.c (reload_net_wm_user_time_window): Fix typo;
	the arguments to meta_window_reload_property_from_xwindow() were
	reversed.  This is why the wm_user_time wasn't getting initialized
	properly from the _NET_WM_USER_TIME_WINDOW.  Fixes part of 
	http://bugzilla.gnome.org/show_bug.cgi?id=488468

2007-10-28  Owen Taylor  <otaylor@redhat.com>

	* src/window.c (meta_window_new_with_attrs): Don't immediately
	unminimize an initially iconic window (#491090)

2007-10-28  Jans Granseuer  <jensgr@gmx.net>

        * src/preview-widget.c (meta_preview_finalize): Free title of
        preview when the preview is destroyed. Closes #469682.

2007-10-27  Alex R.M. Turner  <armtuk@gmail.com>

        * src/tabpopup.c (tab_entry_new): Truncate the string to 
        max_char_per_title before adding bold tags and fix general flow of
        function.

2007-09-15  Elijah Newren  <newren gmail com>

	* configure.in: post-release version bump to 2.20.1

2007-09-15  Elijah Newren  <newren gmail com>

	* configure.in:
	* NEWS:
	2.20.0 release

2007-09-15  Elijah Newren  <newren gmail com>

	* src/session.c (warn_about_lame_clients_and_finish_interact):
	Patch from Alexey Rusakov to prevent a crash on logout with
	metacity subsequently not being restored in future sessions.
	Fixes #433253.

2007-09-01  Elijah Newren  <newren gmail com>

	* HACKING: update; cvs->svn & mention GConf needed
	* MAINTAINERS: Make it match idiotic format requirements (I love
	you Olav!)

2007-08-07  Thomas Thurman  <thomas@thurman.org.uk>

        * configure.in: post-release bump to 2.19.89.

2007-08-07  Thomas Thurman  <thomas@thurman.org.uk>

        * NEWS: 2.19.55 release.
	
2007-08-06  Thomas Thurman  <thomas@thurman.org.uk>

	If KEY_AUTO_RAISE_DELAY is undefined or non-integer, it is not treated
	as zero.

	* src/prefs.c (meta_prefs_init): check type of key, and behave sensibly
	if it's unexpected.